name:                intuit
version:             0.1
synopsis:            Intuitionistic SAT-solver
-- description:
-- license:
license-file:        LICENSE
author:              Koen Claessen
maintainer:          koen@chalmers.se
-- copyright:
category:            Theorem Prover
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable intuit
  main-is:             Intuit.hs
  other-modules:       Clausify, Incremental, ParseProblem, Parsek
  other-extensions:    TypeOperators, RankNTypes
  build-depends:       base >=4, minisat >=0.1 && <0.2, containers >=0.4
  -- hs-source-dirs:
  default-language:    Haskell2010
